# braynscircuitstudiobackend

./: .dockerignore  .env-sample  .gitignore  .gitlab-ci.yml  .pylintrc  AUTHORS.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  README.rst  bcsb-entrypoint.sh  bcsb-requirements.txt  bcsb.dockerfile  bcss-entrypoint.sh  bcss-requirements.txt  bcss-samples.md  bcss.dockerfile  development.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
app/bcsb/: apps.py  asgi.py  methods.py  routing.py
app/jsonrpc/: consumer.py
apps/bcsb/: apps.py  asgi.py  consumers.py  routing.py  schemas.py  serializers.py  settings.py  urls.py  wsgi.py
apps/bcss/: README.md  asgi.py  consumer.py  main.py  manage.py  routing.py  settings.py  urls.py  wsgi.py
apps/common/: api_methods.py  apps.py  common_settings.py  routing.py
bcsb/: __init__.py  __main__.py  entrypoint.py  factory.py  healthcheck.py  settings.py
bcsb/bcsb/: asgi.py  settings.py
bcsb/components/: __init__.py  circuit.py  circuit_info.py  core.py  filesystem.py  memory.py  sonata.py  sonata_config.py  sonata_registry.py  storage.py  volume.py
bcsb/json/: __init__.py  deserialization.py  reflection.py  schema.py  serialization.py  type.py  validation.py
bcsb/jsonrpc/: __init__.py  composing.py  endpoint.py  exceptions.py  handler.py  messages.py  parsing.py
bcsb/path/: __init__.py  validator.py
bcsb/service/: __init__.py  component.py  introspection.py  schemas.py  service.py  token.py
bcsb/utils/: __init__.py  id_generator.py  picking.py  sonata_parser.py
bcsb/websocket/: __init__.py  interface.py  server.py
brayns-circuit-studio-backend/bcsb/: apps.py  consumers.py  routing.py  settings.py
brayns-circuit-studio-backend/jsonrpc/: consumer.py
brayns_circuit_studio_backend/: __init__.py  __main__.py  api_version.py  backend.py  entrypoint.py
braynscircuitstudiobackend/: BCSB  __init__.py  main.py  manage.py
braynscircuitstudiobackend/auth/: auth_service.py  keycloak.py  middleware.py
braynscircuitstudiobackend/backend/: __init__.py  main_websocket_handler.py  (+1 more)
scripts/: start-backend.sh  start-brayns.sh  start.sh
src/: main.py
static-nginx/: Dockerfile
tests/: __init__.py  test_api_version.py  test_bcsb.py  test_version.py
(+301 files in other folders)
