[metadata]
name = braynscircuitstudiobackend
url = https://bbpteam.epfl.ch/documentation/projects/braynscircuitstudiobackend
project_urls =
    Tracker = https://bbpteam.epfl.ch/project/issues/projects/BCSB/issues
    Source = git@bbpgitlab.epfl.ch:viz/brayns/braynscircuitstudiobackend.git
author = BlueBrain Viz Team
author_email = bbp-ou-visualization@groupes.epfl.ch
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
license = BBP-internal-confidential
description=Backend service for Brayns Circuit Studio software
long_description = file: README.md
long_description_content_type = text/markdown
keywords = brayns, raytracing, bbp, BlueBrain

[options]
packages = find:
home_page = https://github.com/BlueBrain/Brayns
python_requires = >=3.9
scripts = braynscircuitstudiobackend/BCSB

[options.packages.find]
include = braynscircuitstudiobackend*
